--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Index </title>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <script src="main.js"></script>
+        <script src="main.js">
     </head>
     <body>
         <center>
@@ -29,4 +29,5 @@
             </div>
         </center>
     </body>
+        </script>  
 </html>
