--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <button onclick="Submit()" id="submit_button">Submit </button>
             <button onclick="sorty()" id="sort_button">Sort </button>
             <div id="sorted_answers">
+                <button id="ans"></button>
             </div>
         </center>
     </body>
