--- a/index.html
+++ b/index.html
@@ -1,34 +1,52 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Index </title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <script src="main.js"></script>
-    </head>
-    <body>
-        <center>
-            <h3 style="margin: 20px;">
-            Student list
-            </h3>
-            <div>
-                <span>1</span>
-                <input type="text" placeholder="Student_1" id="No.1"></input>
-                <br>
-                <span>2</span>
-                <input type="text" placeholder="Student_2" id="No.2"></input>
-                <br>
-                <span>3</span>
-                <input type="text" placeholder="Student_3" id="No.3"></input>
-                <br>
-                <span>4</span>
-                <input type="text" placeholder="Student_4" id="No.4"></input>
-            </div>
-            <button onclick="Submit()" id="submit_button">Submit </button>
-            <button onclick="sorty()" id="sort_button">Sort </button>
-            <div id="sorted_answers">
-                <button id="ans"></button>
-            </div>
-        </center>
-    </body>
-       <script></script>  
+<head>
+	<title>Attendance	</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="main.js"></script>
+
+</head>
+<body>
+<center>
+<h3 style="margin-top: 20px; margin-bottom: 20px; ">
+	List of the students in my class
+</h3>
+
+<div id="rows">
+<span>1</span>
+<input type="text" placeholder="Name of the Student" id="name_of_the_student_1">
+<br>
+
+<span>2</span>
+<input type="text" placeholder="Name of the Student" id="name_of_the_student_2">
+<br>
+
+<span>3</span>
+<input type="text" placeholder="Name of the Student" id="name_of_the_student_3">
+<br>
+
+<span>4</span>
+<input type="text" placeholder="Name of the Student" id="name_of_the_student_4">
+</div>
+
+<button onclick="submit()" id="submit_button">
+	Submit
+</button>
+
+<div id="display_name_with_commas">
+</div>
+
+<hr>
+
+<div id="display_name_without_commas">
+</div>
+
+
+<button onclick="sorting()" id="sort_button">
+	Sort
+</button>
+</center>
+
+</script>
+</body>
 </html>
