--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
 <button onclick="sorting()" id="sort_button">
 	Sort
 </button>
-</center>
-
+	</center>
+	
+	<script type="text/javascript">
 </script>
 </body>
 </html>
